Mise à jour du site

--- a/projet7/index.html
+++ b/projet7/index.html
@@ -28,7 +28,7 @@
     <h2>Contexte</h2>
     <p>Réalisé dans le cadre d’un travail en groupe à l’IUT, Earth Inbox est un court-métrage d’environ une minute. Le but était de créer une production audiovisuelle engagée sur une problématique contemporaine. Avec mon équipe, nous avons choisi un sujet peu abordé mais très actuel : l’impact environnemental des e-mails non supprimés.</p>
 
-    <iframe width="560" height="315" src="https://youtu.be/Pwflcxs8YUE?si=oseS_ufjfxjOk688" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Pwflcxs8YUE?si=MIwwDIokTmfrONLA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <h2>Démarche</h2>
 <h3>Réalisation et gestion de projet</h3>
