--- a/projet8/index.html
+++ b/projet8/index.html
@@ -28,9 +28,9 @@
     <h2>Contexte</h2>
     <p>Réalisé dans le cadre d’un travail en groupe en MMI (2ème année), chaque groupe devait interviewer un bénéficiaire de la Maison du Sport et de la Santé situé à Elbeuf, ainsi qu'un éducateur activité physique adaptée. Les interviews ont été faites en collaboration avec la Maison du Sport et de la Santé qui, eux, vont poster les interviews sur leurs réseaux sociaux.</p>
 
-    <iframe width="560" height="315" src="https://youtu.be/i_66EVM8ids" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-    <h2>Démarche</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/i_66EVM8ids?si=p1RKFA1vutHlWRM8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
+  <h2>Démarche</h2>
 <h3>Réalisation et gestion de projet</h3>
 <p>Nous avons formé une équipe de cinq, et, pour ma part, j’étais cheffe de projet (élue de manière totalement démocratique bien sûr, haha). J’ai donc attribué les rôles aux autres membres et j’ai tenté de les guider du mieux que je pouvais.</p>
 
