Mise à jour du site

--- a/projet7/index.html
+++ b/projet7/index.html
@@ -34,7 +34,7 @@
 <h3>Réalisation et gestion de projet</h3>
 <p>Nous étions un groupe de cinq et avons travaillé sur. Le synopsis était déjà rédigé par notre professeur, mais les autres étapes ont entièrement été faites par nous-même : le tournage, le montage…<p>
 
-<p>Le tournage s’est fait dans le studio de tournage de l’IUT, mais aussi sa cave (pour la rencontre entre Marlowe et le malfaiteur). En ce qui concerne le décor, il était assez simple : une table, un tableau, des journaux… Je pense que le plus dur était de créer cette  (...)</p>
+<p>Le tournage s’est fait dans le studio de tournage de l’IUT, mais aussi sa cave (pour la rencontre entre Marlowe et le malfaiteur). En ce qui concerne le décor, il était assez simple : une table, un tableau, des journaux…</p>
 
 <p>Lors des deux séances de tournages, j’ai été assez « polyvalente » et je me suis occupée de deux parties : dans la première séance, c’est-à-dire la scène où Marlowe est dans son bureau, je me suis occupée de la lumière. Lors de la deuxième séance, donc la scène où Marlowe se fait assassiner, je me suis occupée de la prise de son.<p>
 <p>Le montage a été réalisé sur Adobe Premiere Pro, et pour atteindre l’effet du film noir, j’ai mis toutes les scènes en noir et blanc ainsi qu’un overlay de poussières et de grains de pellicules. J’ai fais de mon mieux pour atteindre l’ambiance sombre et inquiétante qui est un élément clé au film noir.</p>
